@@ -17,10 +17,7 @@ import org.springframework.http.ResponseEntity;
 import org.bson.types.ObjectId;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.Collections;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @RestController
@@ -39,61 +36,91 @@ public class UsersController {
         this.travelPreferenceService = travelPreferenceService;
     }
 
+    /* GET METHODS */
     @GetMapping("/")
     public ResponseEntity<List<Map<String, Object>>> getAllUsers() {
         List<Users> userList = usersService.getAllUsers();
-        List<Map<String, Object>> response = userList.stream().map(users -> {
-            Map<String, Object> userMap = new LinkedHashMap<>();
-
-            userMap.put("userId", users.getId().toHexString());
-            userMap.put("firstName", users.getFirstName());
-            userMap.put("lastName", users.getLastName());
-            userMap.put("username", users.getUsername());
-            userMap.put("email", users.getEmail());
-            userMap.put("password", users.getPassword());
-            userMap.put("phoneNumber", users.getPhoneNumber());
-            userMap.put("role", users.getRole());
-            userMap.put("verificationStatus", users.getVerificationStatus());
-            userMap.put("createdAt", users.getCreatedAt());
-
-            if(users.getTravelPreferences() != null) {
-                TravelPreferences preferences = users.getTravelPreferences();
-                Map<String, Object> preferencesMap = new LinkedHashMap<>();
-                preferencesMap.put("preferenceId", preferences.getPreferenceId().toHexString());
-                preferencesMap.put("activities", preferences.getActivities());
-                preferencesMap.put("food", preferences.getFood());
-                preferencesMap.put("weather", preferences.getWeather());
-                userMap.put("travelPreferences", preferencesMap);
-            } else {
-                userMap.put("travelPreferences", null);
-            }
-
-            List<String> tripIds = (users.getTrips() != null) ?
-                    users.getTrips().stream()
-                            .map(ObjectId::toHexString) // Convert ObjectId to String
-                            .collect(Collectors.toList()) : Collections.emptyList();
-            userMap.put("trips", tripIds);
-
-            return userMap;
-
-
-        }).toList();
+        List<Map<String, Object>> response = userList.stream().map(this::mapUserToResponse).collect(Collectors.toList());
 
         return new ResponseEntity<>( response, HttpStatus.OK);
     }
 
-    @GetMapping("/{username}")
+    @GetMapping("/name/{firstName}/{lastName}")
+    public ResponseEntity<List<Map<String, Object>>> getUserByName(@PathVariable("firstName") String firstName, @PathVariable("lastName") String lastName) {
+        try {
+            List<Users> usersByName = usersService.getByFirstAndLastName(firstName, lastName);
+            List<Map<String, Object>> response = usersByName.stream().map(this::mapUserToResponse).collect(Collectors.toList());
+            return ResponseEntity.ok(response);
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Collections.emptyList());
+        }
+    }
+    @GetMapping("/verificationStatus/{verificationStatus}")
+    public ResponseEntity<List<Map<String, Object>>> getVerificationStatus(@PathVariable("verificationStatus") VerificationStatus verificationStatus) {
+        try{
+            VerificationStatus status = VerificationStatus.fromString(verificationStatus.name());
+            List<Users> usersByStatus = usersService.getByVerificationStatus(status);
+            List<Map<String, Object>> response = usersByStatus.stream().map(this::mapUserToResponse).collect(Collectors.toList());
+            return ResponseEntity.ok(response);
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Collections.emptyList());
+        }
+    }
+
+    @GetMapping("/username/{username}")
     public ResponseEntity<?> getUserByUsername(@PathVariable("username") String username) {
         try {
             Users user = usersService.getByUsername(username);
-            return ResponseEntity.ok(user);
+            Map<String, Object> response = mapUserToResponse(user);
+            return ResponseEntity.ok(response);
         } catch (RuntimeException e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("user not found");
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(String.format("User with username: '%s' not found", username));
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Error occurred while retrieving user: " + e.getMessage());
         }
     }
 
+    @GetMapping("/phoneNumber/{phoneNumber}")
+    public ResponseEntity<?> getUserByPhoneNumber(@PathVariable("phoneNumber") String phoneNumber) {
+        try {
+            Users user = usersService.getByPhoneNumber(phoneNumber);
+            Map<String, Object> response = mapUserToResponse(user);
+            return ResponseEntity.ok(response);
+        } catch (RuntimeException e) {
+            return  ResponseEntity.status(HttpStatus.NOT_FOUND).body(String.format("User with phone number: '%s' not found", phoneNumber));
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Error occurred while retrieving user: " + e.getMessage());
+        }
+    }
+
+    @GetMapping("/role/{role}")
+    public ResponseEntity<List<Map<String, Object>>> getUserByRole(@PathVariable("role") String role) {
+        try{
+            List<Users> usersList = usersService.getByRole(role);
+            List<Map<String, Object>> response = usersList.stream().map(this::mapUserToResponse).collect(Collectors.toList());
+            return new ResponseEntity<>( response, HttpStatus.OK);
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Collections.emptyList());
+        }
+    }
+
+    @GetMapping("/email/{email}")
+    public ResponseEntity<?> getUserByEmail(@PathVariable("email") String email) {
+        try {
+            Users user = usersService.getByEmail(email);
+            Map<String, Object> response = mapUserToResponse(user);
+            return ResponseEntity.ok(response);
+        } catch (RuntimeException e) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(String.format("User with email: '%s' not found", email));
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Error occurred while retrieving user: " + e.getMessage());
+        }
+    }
+
+
+
+
+    /* POST METHODS */
     @PostMapping("/login")
     public ResponseEntity<String> login(@RequestBody LoginRequest loginRequest, HttpServletRequest request) {
         Users user = usersService.login(loginRequest.getUsernameOrEmail(), loginRequest.getPassword());
@@ -189,5 +216,39 @@ public class UsersController {
             return (List<String>) list;
         }
         return Collections.emptyList(); // Return an empty list if the value is not a list
+    }
+
+    private Map<String, Object> mapUserToResponse(Users users) {
+        Map<String, Object> userMap = new LinkedHashMap<>();
+        userMap.put("userId", users.getId().toHexString());
+        userMap.put("firstName", users.getFirstName());
+        userMap.put("lastName", users.getLastName());
+        userMap.put("username", users.getUsername());
+        userMap.put("email", users.getEmail());
+        userMap.put("password", users.getPassword());
+        userMap.put("phoneNumber", users.getPhoneNumber());
+        userMap.put("role", users.getRole());
+        userMap.put("verificationStatus", users.getVerificationStatus());
+        userMap.put("createdAt", users.getCreatedAt());
+
+        if(users.getTravelPreferences() != null) {
+            TravelPreferences preferences = users.getTravelPreferences();
+            Map<String, Object> preferencesMap = new LinkedHashMap<>();
+            preferencesMap.put("preferenceId", preferences.getPreferenceId().toHexString());
+            preferencesMap.put("activities", preferences.getActivities());
+            preferencesMap.put("food", preferences.getFood());
+            preferencesMap.put("weather", preferences.getWeather());
+            userMap.put("travelPreferences", preferencesMap);
+        } else {
+            userMap.put("travelPreferences", null);
+        }
+
+        List<String> tripIds = (users.getTrips() != null) ?
+                users.getTrips().stream()
+                        .map(ObjectId::toHexString) // Convert ObjectId to String
+                        .collect(Collectors.toList()) : Collections.emptyList();
+        userMap.put("trips", tripIds);
+
+        return userMap;
     }
 }
